# mtms

./: .env  .env.default  .env.example  .env.test  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Makefile  Pipfile  README.md  apitest.py  docker-compose.build.yml  docker-compose.core.yml  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.prod.yml  docker-compose.project.yml  docker-compose.registry.yml  docker-compose.test.yml  docker-compose.tester.yml  docker-compose.yml  docker-stack.yml  dotenv_example.py  example1.py  example_mep.py  integration-tests.sh  push-docker-tags.sh  ros_entrypoint.sh  tag-docker-images.sh
examples/: backend_client.py  backend_server.py  labview_server.py  pyproject.toml  socketio_client.py
hotswappable_processors/cppmatlab/compiler/: CMakeLists.txt  clean.sh  compile.sh  compile_all.sh  matlab_processor_interface.cpp  matlab_processor_interface.h  processor_factory.cpp  processor_factory.h
pipeline/cpp/: .gitignore  CMakeLists.txt
pipeline/cpp/src/: mtms_device_event.h  processor.cpp  processor.h  processor_factory.h  processor_interface.cpp  processor_interface.h
py/backend/: Dockerfile  Pipfile  docker-entrypoint.sh  pyproject.toml
py/backend/src/: runner.py
py/backend/tests/: test_command_server.py  test_cyclic_buffer.py  test_parameter_server.py  test_state_server.py
py/eeg/: Dockerfile  Pipfile  integration-tests.sh  pyproject.toml
py/eeg/src/: eeg_simulator.py  runner.py  send_eeg_over_kafka.py
py/init/: Dockerfile  docker-entrypoint.sh  pyproject.toml
py/init/src/: runner.py
py/integration_tests/: .dockerignore  Dockerfile  Pipfile  docker-entrypoint.sh  pyproject.toml  test_backend.py
py/mtms_bridge/: Dockerfile  Pipfile  docker-entrypoint.sh  pyproject.toml
py/mtms_bridge/src/: command_sender.py  labview_runner.py  mtms_connection.py  parameter_command_sender.py  parameter_sender.py  python_runner.py  state_receiver.py
ros2_ws/src/data_processor/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/e-field/: CMakeLists.txt  package.xml
ros2_ws/src/eeg/: CMakeLists.txt  Dockerfile  package.xml  ros_entrypoint.sh
ros2_ws/src/eeg_trigger_processor_cpp/: CMakeLists.txt  README.md  package.xml
sandbox/emotiv_epoc/: Pipfile  README.md  publish_eeg.py  pyproject.toml
sandbox/emotiv_epoc/lib/: cortex.py
scripts/: .gitignore  README.md  bag_parser.py  build-all  build-docs  build-electron-app  build-mtms  build-mtms-all  build-mtms-matlab  build-mtms-ros-workspace  build-ros-workspace  build_neuronavigation.bat  build_ros_workspace.bat  characterize_coil.py  check-ros-discovery  create-site  docker-compose-logs-localtime  initialize_usb_over_ip.py  install-mtms  install-mtms-desktop  install-mtms-system  install_docker.sh  install_ros.sh  kafka-listener.bat  log-mtms  log-mtms-bridge  matlab-build  matlab-commit  matlab-register  mtms  plot_timings.py  pyproject.toml  register-mtms-matlab  restart-mtms  restart-mtms-bridge  run-kafka.bat  run-zookeeper.bat  run_invesalius.bat  set-site-config  setup  (+12 more)
scripts/datasets/: dataset_download.sh
scripts/linux/installation/: install-docker  install-ros  setup-environment  setup-lab-computer  setup-sysctl  setup-systemd
scripts/linux/usage/: build  build-all  cancel-experiment  configure  configure-project  create  create-project  docker-compose-logs-localtime  instructions  list  list-projects  list-scripts  log  log-mtms-device-bridge  logout-from-github  matlab-build  pause  rebuild  reconfigure-git  record  restart  resume  ros-start-device  ros-start-experiment  ros-stop-device  ros-stop-experiment  set-project  start  start-core  start-device  start-experiment  start-mtms  start-mtms-device-bridge  start-service  start-session  stop-core  stop-device  stop-experiment  stop-mtms-device-bridge  stop-session  (+1 more)
scripts/python/: generate_random_data.py
scripts/src/: test_edfreader.py
scripts/windows/usage/: build_neuronavigation.bat  start_neuronavigation.bat
src/busylight_manager/: Dockerfile  package.xml  ros_entrypoint.sh  setup.py
src/busylight_manager/busylight_manager/: busylight_manager.py
src/busylight_manager/launch/: busylight_manager.launch.py
src/eeg_bridge/: CMakeLists.txt  Dockerfile  package.xml  ros_entrypoint.sh
src/eeg_bridge/launch/: eeg_bridge.launch.py
src/eeg_bridge/src/: eeg_bridge.cpp  eeg_bridge.h
src/efield/: CMakeLists.txt  Dockerfile  Dockerfile.cuda  Dockerfile.cuda2  package.xml  ros_entrypoint.sh
src/efield/launch/: efield.launch.py
src/efield/src/: efield.cpp
src/experiment_performer/: Dockerfile  package.xml  ros_entrypoint.sh  setup.py
src/experiment_performer/experiment_performer/: experiment_performer.py
src/experiment_performer/launch/: experiment_performer.launch.py
src/mep_analyzer/: CMakeLists.txt  Dockerfile  package.xml  ros_entrypoint.sh  setup.py
src/mep_analyzer/include/: mep_analyzer.h  ring_buffer.h
src/mep_analyzer/launch/: mep_analyzer.launch.py
src/mep_analyzer/mep_analyzer/: analyze_mep.py
src/mep_analyzer/src/: mep_analyzer.cpp
src/mtms_simulator/: CMakeLists.txt  Dockerfile  package.xml  ros_entrypoint.sh
src/mtms_simulator/launch/: mtms_simulator.launch.py
src/mtms_simulator/mtms_simulator/: channel.py  mtms_simulator.py
src/mtms_simulator/src/: channel.cpp  mtms_simulator.cpp  mtms_simulator_node.cpp  neurone_trigger_client.cpp
src/realtime_utils/: CMakeLists.txt  package.xml
src/realtime_utils/src/: utils.cpp
src/remote_controller/: CMakeLists.txt  Dockerfile  package.xml  ros_entrypoint.sh
src/remote_controller/launch/: remote_controller.launch.py
src/remote_controller/src/: remote_controller.cpp
src/targeting/: CMakeLists.txt  Dockerfile  package.xml  ros_entrypoint.sh
src/timebase_calibrator/: CMakeLists.txt  Dockerfile  package.xml  ros_entrypoint.sh
src/trial_performer/: CMakeLists.txt  Dockerfile  package.xml  ros_entrypoint.sh
src/trigger_processor/: CMakeLists.txt  Dockerfile  package.xml  ros_entrypoint.sh
src/waveform_utils/: CMakeLists.txt  Dockerfile  package.xml  ros_entrypoint.sh
(+2418 files in other folders)
