[tool.poetry]
name = "scripts"
version = "0.0.1"
description = ""
authors = ["Olli-Pekka Kahilakoski <olli-pekka.kahilakoski@aalto.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
mne = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
