[tool.poetry]
name = "backend"
version = "0.0.1"
description = "A backend for communicating between frontend, neuronavigation, and Kafka."

# A required field, add other authors as needed.
authors = [
    "Baran Aydogan <baran.aydogan@aalto.fi>",
    "Roberto Guidotti <rob.guidotti@gmail.com>",
    "Olli-Pekka Kahilakoski <olli-pekka.kahilakoski@aalto.fi>",
    "Juuso Korhonen <juuso.korhonen@aalto.fi>",
    "Tuomas Mutanen <tuomas.mutanen@aalto.fi>",
    "Jaakko Nieminen <jaakko.nieminen@aalto.fi>",
    "Timo Roine <timo.roine@aalto.fi>",
    "Ana Soto de la Cruz <ana.sotodelacruz@aalto.fi>",
    "Victor Souza <victor.souza@aalto.fi>"
]

[tool.poetry.dependencies]
python = "^3.8"
confluent-kafka = "^1.6.1"
Flask = "^1.1.2"
Flask-Cors = "^3.0.10"
numpy = "^1.20.2"
pykafka = "^2.8.0"
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
pytest-asyncio = "^0.15.1"
Flask-SocketIO = "^5.0.1"
python-socketio = "^5.2.1"
gevent = "^21.1.2"
gevent-websocket = "^0.10.1"
setuptools = "^56.2.0"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
nest-asyncio = "^1.5.1"

# The path specified here comes from Dockerfile.
mtms = { path = "/code/py/packages/", develop = true }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
