[tool.poetry]
name = "eeg"
version = "0.0.1"
description = "The EEG service."

# A required field, add other authors as needed.
authors = [
    "Baran Aydogan <baran.aydogan@aalto.fi>",
    "Roberto Guidotti <rob.guidotti@gmail.com>",
    "Olli-Pekka Kahilakoski <olli-pekka.kahilakoski@aalto.fi>",
    "Juuso Korhonen <juuso.korhonen@aalto.fi>",
    "Tuomas Mutanen <tuomas.mutanen@aalto.fi>",
    "Jaakko Nieminen <jaakko.nieminen@aalto.fi>",
    "Timo Roine <timo.roine@aalto.fi>",
    "Ana Soto de la Cruz <ana.sotodelacruz@aalto.fi>",
    "Victor Souza <victor.souza@aalto.fi>"
]

[tool.poetry.dependencies]
python = "^3.8"
pykafka = "^2.8.0"
mne = "^0.23.0"
confluent-kafka = "^1.6.1"

# The path specified here comes from Dockerfile.
mtms = { path = "/code/py/packages/", develop = true }

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
