[tool.poetry]
name = "integration_tests"
version = "0.0.1"
description = "Test integration between different services."

# A required field, add other authors as needed.
authors = [
    "Baran Aydogan <baran.aydogan@aalto.fi>",
    "Roberto Guidotti <rob.guidotti@gmail.com>",
    "Olli-Pekka Kahilakoski <olli-pekka.kahilakoski@aalto.fi>",
    "Juuso Korhonen <juuso.korhonen@aalto.fi>",
    "Tuomas Mutanen <tuomas.mutanen@aalto.fi>",
    "Jaakko Nieminen <jaakko.nieminen@aalto.fi>",
    "Timo Roine <timo.roine@aalto.fi>",
    "Ana Soto de la Cruz <ana.sotodelacruz@aalto.fi>",
    "Victor Souza <victor.souza@aalto.fi>"
]

[tool.poetry.dependencies]
python = "^3.8"
python-socketio = "^5.2.1"
pytest = "^6.2.4"
requests = "^2.25.1"
pytest-asyncio = "^0.15.1"
aiohttp = "^3.7.4"
typing-extensions = "^3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
