<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>busylight_manager</name>
  <version>0.1.0</version>
  <description>Busylight manager</description>
  <maintainer email="connect2brain@aalto.fi">Connect2Brain</maintainer>
  <license>GPL-3.0-only</license>

  <depend>rclpy</depend>

  <depend>mtms_device_interfaces</depend>
  <depend>mtms_system_interfaces</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
