<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>efield</name>
  <version>0.0.1</version>
  <description>E-field modeling</description>
  <maintainer email="connect2brain@aalto.fi">Connect2Brain</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>mtms_targeting_interfaces</depend>
  <depend>mtms_neuronavigation_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
