<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mep_analyzer</name>
  <version>0.1.0</version>
  <description>MEP analyzer</description>
  <maintainer email="connect2brain@aalto.fi">Connect2Brain</maintainer>
  <license>GPL-3.0-only</license>

  <depend>rclpy</depend>
  <depend>eeg_msgs</depend>
  <depend>mep_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
