<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trial_performer</name>
  <version>0.1.0</version>
  <description>Trial performer</description>
  <maintainer email="connect2brain@aalto.fi">Connect2Brain</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>mtms_device_interfaces</depend>
  <depend>event_interfaces</depend>
  <depend>experiment_interfaces</depend>
  <depend>neuronavigation_interfaces</depend>
  <depend>system_interfaces</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
