<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trigger_processor</name>
  <version>0.1.0</version>
  <description>Process triggers from EEG and EMG data</description>
  <maintainer email="connect2brain@aalto.fi">Connect2Brain</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>mtms_trigger_interfaces</depend>
  <depend>mtms_eeg_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
